--- a/Inmobiliariatap/src/main/resources/application.properties
+++ b/Inmobiliariatap/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+#DATASOURCE (POSTGRES)
+spring.datasource.url=jdbc:postgresql://localhost/inmobiliariatap
+spring.datasource.username=postgres
+spring.datasource.password=Duran2001
+spring.datasource.driver-class-name=org.postgresql.Driver
+#JPA
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
