--- a/Inmobiliariatap/pom.xml
+++ b/Inmobiliariatap/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>mx.unach</groupId>
 	<artifactId>Inmobiliariatap</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>Inmobiliariatap</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
